style: fix layout for improved pixel alignment

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ tooltip label {
   color: @module-fg;
   border-radius: 8px;
   box-shadow: none;
-  margin: 2px 0;
+  margin: 3px 0;
   padding: 0 2px;
   transition: none;
 }
@@ -60,7 +60,7 @@ tooltip label {
   background: @active-bg;
   text-shadow: 0 0 2px rgba(0, 0, 0, 0.6);
   box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.4);
-  margin: 2px;
+  margin: 3px;
   padding: 0 6px;
 }
 
@@ -72,6 +72,7 @@ tooltip label {
 #custom-cpuinfo,
 #memory,
 #custom-cpu,
+#idle_inhibitor,
 #clock,
 #custom-wifi,
 #bluetooth,
@@ -83,7 +84,6 @@ tooltip label {
 #custom-power {
   opacity: 1;
   color: @module-fg;
-  margin-bottom: 0;
   padding: 0 4px;
   text-shadow: 0 0 2px rgba(0, 0, 0, 0.6);
 }
@@ -96,7 +96,7 @@ tooltip label {
 #custom-left6,
 #custom-left7,
 #custom-left8 {
-  font-size: 11pt;
+  font-size: 12.4pt;
   text-shadow: -2px 0 2px rgba(0, 0, 0, 0.5);
 }
 
@@ -105,7 +105,7 @@ tooltip label {
 #custom-right3,
 #custom-right4,
 #custom-right5 {
-  font-size: 11pt;
+  font-size: 12.4pt;
   padding-right: 3px;
   text-shadow: 2px 0 2px rgba(0, 0, 0, 0.5);
 }
@@ -181,8 +181,7 @@ tooltip label {
 }
 #custom-leftin1 {
   color: @cpu;
-  font-size: 12.2pt;
-  margin-bottom: -2px;
+  font-size: 12.4pt;
 }
 
 /* == Distro Icon == */
@@ -193,14 +192,12 @@ tooltip label {
   text-shadow: -2px 0 2px rgba(0, 0, 0, 0.6);
   padding-left: 3px;
 }
-#idle_inhibitor {
+#custom-distro {
   color: @distro-fg;
   background: @distro-bg;
   font-size: 11pt;
-  margin-right: -1px;
-  margin-bottom: -2px;
-  padding-right: 0;
-  padding-left: 3px;
+  margin: 0 -1px -2px 0;
+  padding: 0 0 0 3px;
   text-shadow: 0 0 1.5px rgba(0, 0, 0, 1);
 }
 #custom-right2 {
@@ -212,11 +209,16 @@ tooltip label {
 
 #custom-rightin1 {
   color: @time;
-  font-size: 12.2pt;
-  margin-bottom: -2px;
+  font-size: 12.4pt;
+}
+#idle_inhibitor {
+  background: @time;
+  margin-right: -2px;
+  padding: 0 0 0 7px;
 }
 #clock.time {
   background: @time;
+  padding: 0 3px 0 0;
 }
 #custom-right3 {
   color: @time;
@@ -347,8 +349,7 @@ tooltip label {
 #custom-leftin2 {
   color: @battery;
   background: @main-bg;
-  font-size: 12.2pt;
-  margin-bottom: -2px;
+  font-size: 12.4pt;
 }
 #custom-power {
   color: @main-bg;
@@ -356,9 +357,8 @@ tooltip label {
   text-shadow: 0 0 2px rgba(0, 0, 0, 0.6);
   box-shadow: 1px 0 2px 1px rgba(0, 0, 0, 0.6);
   border-radius: 10px;
-  margin: 2px 4px 2px 0;
-  padding-right: 6px;
-  padding-left: 9px;
+  margin: 3px 4px 3px 0;
+  padding: 0 6px 0 9px;
 }
 #custom-power:hover {
   color: @hover-fg;
